| Summary: | ASTERISK-24482: func_talkdetect: Fix stasis message leak in audiohook callback | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2014-11-02 10:02:04.000-0600 | Date Closed: | 2014-11-04 13:39:39.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Functions/func_talkdetect |
| Versions: | SVN 12.6.1 13.0.0-beta3 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Add missing cleanup for stasis_message. | ||
| Comments: | |||